# Progetto-Reti_Aiello

Wrapper/: CMakeLists.txt
relazione/: main.tex
segreteria/: CMakeLists.txt  main.c
studente/: CMakeLists.txt  main.c
universita/: CMakeLists.txt  main.c
